Modified some styles to avoid overflow

--- a/style.css
+++ b/style.css
@@ -3,18 +3,26 @@
   font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   display: flex;
   justify-content: center;
   align-content: center;
-  background-color: #360034;
+  background-color: rgb(54, 0, 52);
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   background-color: none;
@@ -25,7 +33,7 @@ body {
   grid-template-rows: repeat(3, 1fr);
   height: 600px;
   width: 600px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 .main-container .gameboard .board-cell {
   display: flex;
